added subscription-plan section content

--- a/index.html
+++ b/index.html
@@ -92,20 +92,21 @@
                         Singolo
                     </p>
                     <div class="card-content">
-                        <h3>Titolino</h3>
-                        <p class="sub-cost">10 &euro;</p>
+                        <h3>Professional</h3>
+                        <p class="sub-cost">&euro; 12.00</p>
                         <p>/mese</p>
                         <ul class="sub-benefit">
                             <li>
-                                Lorem
+                                <i class="fa-solid fa-user"></i>
+                                <span>1 utente</span>
                             </li>
                             <li>
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                <i class="fa-solid fa-folder"></i>
+                                <span>5 TB di spazio di archiviazione sicuro</span>
                             </li>
                             <li>
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, praesentium et ab, minus
-                                laborum quaerat minima libero ipsa quas ratione cumque eum laboriosam deleniti dicta
-                                dolores. Provident dignissimos voluptatibus inventore?
+                                <i class="fa-solid fa-share-nodes"></i>
+                                <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
                             </li>
                         </ul>
                         <button>
@@ -113,8 +114,14 @@
                         </button>
                         <span>oppure</span><a href="">acquista ora</a>
                         <ul class="sub-recap">Punti salienti del piano
-                            <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-                            <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                            <li>
+                                <i class="fa-solid fa-check"></i>
+                                <span>Invia file fino a 100GB con Dropbox Transfert</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-check"></i>
+                                <span>Cartelle offline su dispositivi mobili</span>
+                            </li>
                         </ul>
                     </div>
                 </article>
@@ -126,20 +133,25 @@
                         Team
                     </p>
                     <div class="card-content">
-                        <h3>Titolino</h3>
-                        <p class="sub-cost">10 &euro;</p>
-                        <p>/mese</p>
+                        <h3>Advanced</h3>
+                        <p class="sub-cost">&euro; 18.00</p>
+                        <p>/mese/utente</p>
                         <ul class="sub-benefit">
                             <li>
-                                Lorem
+                                <i class="fa-solid fa-users"></i>
+                                <span>3 o più utenti</span>
                             </li>
                             <li>
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                <i class="fa-solid fa-folder"></i>
+                                <span>
+                                    Tutto lo spazio di cui ha bisogno il tuo team
+                                </span>
                             </li>
                             <li>
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, praesentium et ab, minus
-                                laborum quaerat minima libero ipsa quas ratione cumque eum laboriosam deleniti dicta
-                                dolores. Provident dignissimos voluptatibus inventore?
+                                <i class="fa-solid fa-share-nodes"></i>
+                                <span>
+                                    Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team
+                                </span>
                             </li>
                         </ul>
                         <button>
@@ -147,8 +159,36 @@
                         </button>
                         <span>oppure</span><a href="">acquista ora</a>
                         <ul class="sub-recap">Punti salienti del piano
-                            <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-                            <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                            <li>
+                                <i class="fa-solid fa-check"></i>
+                                <span>
+                                    Nessun limite di spazio per i file
+                                </span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-check"></i>
+                                <span>
+                                    Cartelle offline su dispositivi mobili
+                                </span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-check"></i>
+                                <span>
+                                    Risparmio del 50% rispetto alle iscrizioni singole
+                                </span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-check"></i>
+                                <span>
+                                    Possibilità di inserire nuovi membri del team
+                                </span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-check"></i>
+                                <span>
+                                    Gestione dei permessi in base ai ruoli
+                                </span>
+                            </li>
                         </ul>
                     </div>
                 </article>
@@ -160,20 +200,28 @@
                         Azienda
                     </p>
                     <div class="card-content">
-                        <h3>Titolino</h3>
-                        <p class="sub-cost">10 &euro;</p>
-                        <p>/mese</p>
+                        <h3>Enterprise</h3>
+                        <p class="sub-cost">Contattaci</p>
+                        <p>-</p>
                         <ul class="sub-benefit">
                             <li>
-                                Lorem
+                                <i class="fa-solid fa-user"></i>
+                                <span>
+                                    10 o più utenti
+                                </span>
                             </li>
                             <li>
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                <i class="fa-solid fa-folder"></i>
+                                <span>
+                                    Soluzioni personalizzabili per la tua azienda
+                                </span>
                             </li>
                             <li>
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, praesentium et ab, minus
-                                laborum quaerat minima libero ipsa quas ratione cumque eum laboriosam deleniti dicta
-                                dolores. Provident dignissimos voluptatibus inventore?
+                                <i class="fa-solid fa-share-nodes"></i>
+                                <span>
+                                    Assistenza personalizzata per aiutare gli amministratori in una gestione su larga
+                                    scala
+                                </span>
                             </li>
                         </ul>
                         <button>
@@ -181,8 +229,24 @@
                         </button>
                         <span>oppure</span><a href="">acquista ora</a>
                         <ul class="sub-recap">Punti salienti del piano
-                            <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-                            <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                            <li>
+                                <i class="fa-solid fa-check"></i>
+                                <span>
+                                    Cartelle offline su dispositivi mobili
+                                </span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-check"></i>
+                                <span>
+                                    Servizio assistenza 24/h
+                                </span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-check"></i>
+                                <span>
+                                    Possibilità di personalizzazione totale
+                                </span>
+                            </li>
                         </ul>
                     </div>
                 </article>
@@ -193,11 +257,14 @@
                         </span>
                         Team
                     </p>
-                    <div class="flex-between">
-                        <div>
-                            <h3>Titolino</h3>
-                            <p class="sub-cost">lorem</p>
-                            <p>lorem</p>
+                    <div class="card-content flex-between">
+                        <div class="custom-plan-info">
+                            <h3>Enterprise</h3>
+                            <p class="sub-cost">Contatta l'ufficio vendite per i prezzi</p>
+                            <p>
+                                Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella
+                                gestione su qualsiasi scala.
+                            </p>
                         </div>
                         <div>
                             <button>
