added dropbox-partner section content

--- a/index.html
+++ b/index.html
@@ -276,16 +276,18 @@
             </div>
         </section>
 
-        <section class="dropbox-partner main-container flex-between">
-            <div>IMG</div>
-            <div class="partner-info">
-                <h2>Titoletto</h2>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur quae consequuntur quas
-                    saepe, quasi enim id quaerat nobis accusantium numquam corporis earum, deserunt tempore
-                    voluptatibus incidunt facilis commodi aliquid! Id.
-                </p>
-                <button class="btn-white">Trova un partner</button>
+        <section class="dropbox-partner">
+            <div class="main-container flex-between">
+                <img src="img/partner.png" alt="Photo of two work colleagues">
+                <div class="partner-info">
+                    <h3>Entra in contatto con un partner Dropbox</h3>
+                    <p>
+                        Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per
+                        raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e
+                        supporto continui.
+                    </p>
+                    <button class="btn-white">Trova un partner</button>
+                </div>
             </div>
         </section>
 
