added dropbox-business-feature section content

--- a/index.html
+++ b/index.html
@@ -291,61 +291,61 @@
             </div>
         </section>
 
-        <section class="dropbox-business main-container">
-            <h2>TITOLETTO DROPBOX BUSINESS</h2>
+        <section class="dropbox-business-feature main-container">
+            <h2>Esegui più operazioni con Dropbox Business</h2>
             <div class="dbusiness-features flex-between">
                 <article class="feature-card">
-                    <div>IMG</div>
-                    <h3>Titolino feature</h3>
+                    <img src="img/business-feature-switching-tools.png" alt="Switching Tool Feature Image">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure odit suscipit consectetur sapiente
-                        accusantium illo aspernatur, ullam dicta veritatis maiores, provident tempore, nulla ad quo
-                        fugiat recusandae earum officiis consequuntur?
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox.
                     </p>
                 </article>
                 <article class="feature-card">
-                    <div>IMG</div>
-                    <h3>Titolino feature</h3>
+                    <img src="img/business-feature-send-files-it.png" alt="Sending Files Feature Image">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure odit suscipit consectetur sapiente
-                        accusantium illo aspernatur, ullam dicta veritatis maiores, provident tempore, nulla ad quo
-                        fugiat recusandae earum officiis consequuntur?
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox.
                     </p>
                 </article>
                 <article class="feature-card">
-                    <div>IMG</div>
-                    <h3>Titolino feature</h3>
+                    <img src="img/business-feature-coordinate-it.png" alt="Work Coordination Feature Image">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure odit suscipit consectetur sapiente
-                        accusantium illo aspernatur, ullam dicta veritatis maiores, provident tempore, nulla ad quo
-                        fugiat recusandae earum officiis consequuntur?
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox.
                     </p>
                 </article>
                 <article class="feature-card">
-                    <div>IMG</div>
-                    <h3>Titolino feature</h3>
+                    <img src="img/business-feature-integrations-it.png" alt="App Integration Feature Image">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure odit suscipit consectetur sapiente
-                        accusantium illo aspernatur, ullam dicta veritatis maiores, provident tempore, nulla ad quo
-                        fugiat recusandae earum officiis consequuntur?
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox.
                     </p>
                 </article>
                 <article class="feature-card">
-                    <div>IMG</div>
-                    <h3>Titolino feature</h3>
+                    <img src="img/business-feature-multi-device.png" alt="Multi-device Compatibility Feature Image">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure odit suscipit consectetur sapiente
-                        accusantium illo aspernatur, ullam dicta veritatis maiores, provident tempore, nulla ad quo
-                        fugiat recusandae earum officiis consequuntur?
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox.
                     </p>
                 </article>
                 <article class="feature-card">
-                    <div>IMG</div>
-                    <h3>Titolino feature</h3>
+                    <img src="img/business-feature-security.png" alt="Security Tool Feature Image">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure odit suscipit consectetur sapiente
-                        accusantium illo aspernatur, ullam dicta veritatis maiores, provident tempore, nulla ad quo
-                        fugiat recusandae earum officiis consequuntur?
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox.
                     </p>
                 </article>
             </div>
