--- a/index.html
+++ b/index.html
@@ -376,13 +376,15 @@
                 </div>
             </div>
             <div class="customer-info">
-                <div>LOGO</div>
+                <img src="img/designit.svg" alt="Designit Logo">
+                <div class="divider"></div>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure suscipit autem ea magni debitis
-                    incidunt labore libero, tempore aperiam consequatur eos asperiores ullam minus quos molestias alias
-                    qui accusamus delectus?
+                    "I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte
+                    soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper.
+                    Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e
+                    Dropbox Paper."
                 </p>
-                <p>cit.</p>
+                <p>Morten Thomsen, Global IT Lead</p>
             </div>
             <div class="customers">
                 <div>
@@ -406,7 +408,9 @@
 
         <section class="dropbox-business bg-lightblue">
             <div class="main-container flex-between">
-                <h2>TITOLETTO</h2>
+                <h2>
+                    Porta Dropbox Business nella tua azienda
+                </h2>
                 <button class="btn-white">Inizia la tua prova gratuita</button>
             </div>
         </section>
