--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         </section>
 
         <section class="customer-teams flex-between">
-            <div class="customers">
+            <div class="customers customer-left">
                 <div>
                     <div id="designit" class="customer">
                         <img src="img/designit.svg" alt="Designit Logo">
@@ -386,7 +386,7 @@
                 </p>
                 <p>Morten Thomsen, Global IT Lead</p>
             </div>
-            <div class="customers">
+            <div class="customers customer-right">
                 <div>
                     <div id="world-bicycle" class="customer">
                         <img src="img/world_bicycle_relief.svg" alt="World Bicycle Relief Logo">
@@ -419,19 +419,19 @@
             <h2>Domande frequenti</h2>
             <div class="question flex-between">
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
                 </p>
                 <i class="fa-solid fa-angle-down"></i>
             </div>
             <div class="question flex-between">
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
                 </p>
                 <i class="fa-solid fa-angle-down"></i>
             </div>
             <div class="question flex-between">
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
                 </p>
                 <i class="fa-solid fa-angle-down"></i>
             </div>
@@ -529,7 +529,13 @@
             </nav>
             <div class="language">
                 <span>
-                    Italiano &#11205;
+                    <i class="fa-solid fa-earth-americas"></i>
+                </span>
+                <span>
+                    Italiano
+                </span>
+                <span>
+                    <i class="fa-solid fa-caret-up"></i>
                 </span>
             </div>
         </section>
