changed customer-teams section layout

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="jumbotron-box ">
                     <img src="img/jumbo.png" alt="Dropbox Client Image">
-                    <div class="jumbotron-info clearfix-left">
+                    <div class="jumbotron-info clearfix">
                         <div class="jumbotron-info-content">
                             <p>
                                 Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo
@@ -357,18 +357,16 @@
         </section>
 
         <section class="customer-teams flex-between">
-            <div class="customers customer-left">
-                <div>
+            <div class="customers-left">
+                <div class="customers">
                     <div id="designit" class="customer">
                         <img src="img/designit.svg" alt="Designit Logo">
                     </div>
-                    <div id="florida-uni" class="customer">
-                        <img src="img/university_of_florida.svg" alt="University Of Florida Logo">
-                    </div>
-                </div>
-                <div>
                     <div id="arizona-uni" class="customer">
                         <img src="img/arizona_state_university.svg" alt="Arizona State University Logo">
+                    </div>
+                    <div id="florida-uni" class="customer">
+                        <img src="img/university_of_florida.svg" alt="University Of Florida Logo">
                     </div>
                     <div id="topps" class="customer">
                         <img src="img/topps.svg" alt="Topps Logo">
@@ -386,24 +384,23 @@
                 </p>
                 <p>Morten Thomsen, Global IT Lead</p>
             </div>
-            <div class="customers customer-right">
-                <div>
+            <div class="customers-right">
+                <div class="customers">
                     <div id="world-bicycle" class="customer">
                         <img src="img/world_bicycle_relief.svg" alt="World Bicycle Relief Logo">
                     </div>
-                    <div id="lonely-planet" class="customer">
-                        <img src="img/lonely_planet.svg" alt="Lonely Planet Logo">
-                    </div>
-                </div>
-                <div>
                     <div id="hearst-corp" class="customer">
                         <img src="img/hearst_corp.svg" alt="Hearst Corporation Logo">
+                    </div>
+                    <div id="lonely-planet" class="customer">
+                        <img src="img/lonely_planet.svg" alt="Lonely Planet Logo">
                     </div>
                     <div id="clear-channel" class="customer">
                         <img src="img/clear_channel.svg" alt="Clear Channel Logo">
                     </div>
                 </div>
             </div>
+
         </section>
 
         <section class="dropbox-business bg-lightblue">
