changed article.plan-card ul list items

--- a/index.html
+++ b/index.html
@@ -96,16 +96,13 @@
                         <p class="sub-cost">&euro; 12.00</p>
                         <p>/mese</p>
                         <ul class="sub-benefit">
-                            <li>
-                                <i class="fa-solid fa-user"></i>
+                            <li class="benefit-user">
                                 <span>1 utente</span>
                             </li>
-                            <li>
-                                <i class="fa-solid fa-folder"></i>
+                            <li class="benefit-archive">
                                 <span>5 TB di spazio di archiviazione sicuro</span>
                             </li>
-                            <li>
-                                <i class="fa-solid fa-share-nodes"></i>
+                            <li class="benefit-share">
                                 <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
                             </li>
                         </ul>
@@ -115,11 +112,9 @@
                         <span>oppure</span><a href="">acquista ora</a>
                         <ul class="sub-recap">Punti salienti del piano
                             <li>
-                                <i class="fa-solid fa-check"></i>
                                 <span>Invia file fino a 100GB con Dropbox Transfert</span>
                             </li>
                             <li>
-                                <i class="fa-solid fa-check"></i>
                                 <span>Cartelle offline su dispositivi mobili</span>
                             </li>
                         </ul>
@@ -137,18 +132,15 @@
                         <p class="sub-cost">&euro; 18.00</p>
                         <p>/mese/utente</p>
                         <ul class="sub-benefit">
-                            <li>
-                                <i class="fa-solid fa-users"></i>
+                            <li class="benefit-user-team">
                                 <span>3 o più utenti</span>
                             </li>
-                            <li>
-                                <i class="fa-solid fa-folder"></i>
+                            <li class="benefit-archive">
                                 <span>
                                     Tutto lo spazio di cui ha bisogno il tuo team
                                 </span>
                             </li>
-                            <li>
-                                <i class="fa-solid fa-share-nodes"></i>
+                            <li class="benefit-share">
                                 <span>
                                     Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team
                                 </span>
@@ -160,31 +152,26 @@
                         <span>oppure</span><a href="">acquista ora</a>
                         <ul class="sub-recap">Punti salienti del piano
                             <li>
-                                <i class="fa-solid fa-check"></i>
                                 <span>
                                     Nessun limite di spazio per i file
                                 </span>
                             </li>
                             <li>
-                                <i class="fa-solid fa-check"></i>
                                 <span>
                                     Cartelle offline su dispositivi mobili
                                 </span>
                             </li>
                             <li>
-                                <i class="fa-solid fa-check"></i>
                                 <span>
                                     Risparmio del 50% rispetto alle iscrizioni singole
                                 </span>
                             </li>
                             <li>
-                                <i class="fa-solid fa-check"></i>
                                 <span>
                                     Possibilità di inserire nuovi membri del team
                                 </span>
                             </li>
                             <li>
-                                <i class="fa-solid fa-check"></i>
                                 <span>
                                     Gestione dei permessi in base ai ruoli
                                 </span>
@@ -204,20 +191,17 @@
                         <p class="sub-cost">Contattaci</p>
                         <p>-</p>
                         <ul class="sub-benefit">
-                            <li>
-                                <i class="fa-solid fa-user"></i>
+                            <li class="benefit-user">
                                 <span>
                                     10 o più utenti
                                 </span>
                             </li>
-                            <li>
-                                <i class="fa-solid fa-folder"></i>
+                            <li class="benefit-archive">
                                 <span>
                                     Soluzioni personalizzabili per la tua azienda
                                 </span>
                             </li>
-                            <li>
-                                <i class="fa-solid fa-share-nodes"></i>
+                            <li class="benefit-share">
                                 <span>
                                     Assistenza personalizzata per aiutare gli amministratori in una gestione su larga
                                     scala
@@ -230,19 +214,16 @@
                         <span>oppure</span><a href="">acquista ora</a>
                         <ul class="sub-recap">Punti salienti del piano
                             <li>
-                                <i class="fa-solid fa-check"></i>
                                 <span>
                                     Cartelle offline su dispositivi mobili
                                 </span>
                             </li>
                             <li>
-                                <i class="fa-solid fa-check"></i>
                                 <span>
                                     Servizio assistenza 24/h
                                 </span>
                             </li>
                             <li>
-                                <i class="fa-solid fa-check"></i>
                                 <span>
                                     Possibilità di personalizzazione totale
                                 </span>
